--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body{
     margin: 0%;
     padding: 0;
@@ -48,7 +52,6 @@ nav a {
     text-decoration: none;
     color: #727272;
     text-transform: uppercase;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav .active a,
@@ -57,9 +60,99 @@ nav a:hover {
     color: #fff;
 }
 
+.column {
+    flex-direction: column;
+}
+
 #banner {
+    display: flex;
+    justify-content: center;
     background-image: url('../image/ganhar-dinheiro-internet-banner.jpg');
     background-position: center;
     background-size: cover;
     height: 670px;
+}
+
+.banner-headline {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.banner-headline h1 {
+    max-width: 350px;
+    color: white;
+    font-size: 70px;
+    text-shadow: 1px 1px 0 #555;
+    margin: 0;
+    padding: 0;
+}
+
+.banner-headline h2 {
+    max-width: 300px;
+    color: white;
+    flex-wrap: wrap;
+    font-size: 21px;
+    text-shadow: 1px 1px 0 #555;
+    margin: 0;
+    padding: 0;
+    margin-top: 30px;
+}
+
+.banner-options {
+    height: 210px;
+    display: flex;
+}
+
+.banner1,
+.banner2,
+.banner3 {
+    flex: 1;
+    color: white;
+    padding: 20px;
+}
+
+.banner1 {
+    background-color: #39aae1;
+}
+
+.banner2 {
+    background-color: #0079c7;
+}
+
+.banner3 {
+    background-color: #2b4c99;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.banner-title {
+    font-size: 21px;
+}
+
+.banner-description {
+    font-size: 12px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.banner-options a {
+    display: inline-block;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    padding: 5px;
+    color: #fff;
+    font-size: 13px;
+    text-decoration: none;
+}
+
+.banner3 .descriptions {
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid white;
 }
