--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,3 +156,35 @@ nav a:hover {
     padding-bottom: 15px;
     border-bottom: 1px solid white;
 }
+
+#body {
+    display: flex;
+    justify-content: center;
+}
+
+#body section {
+    flex: 2;
+}
+
+#body aside {
+    flex: 1;
+}
+
+.widget_title {
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+
+.widget_title_text {
+    color: black;
+    font-size: 21px;
+    font-weight: bolder;
+}
+
+.widget_title_bar {
+    width: 50px;
+    height: 2px;
+    background-color: #36a9e1;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
