--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,3 +188,105 @@ nav a:hover {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.widget_body {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.widget_body a {
+    text-decoration: none;
+}
+
+article {
+    flex: 1;
+    width: 300px;
+    margin-right: 20px;
+}
+
+article .news_data {
+    display: flex;
+}
+
+article .news_posted_at {
+    background-color: #2b4c99;
+    color: #fff;
+    font-size: 12;
+    padding: 10px;
+    margin-right: 2px;
+}
+
+article .news_coments {
+    background-color: #39aae1;
+    color: #fff;
+    font-size: 12;
+    padding: 10px
+}
+
+article .news_thumbnail {
+    margin-top: 30px;
+}
+
+article .news_thumbnail img{
+    width: 100%;
+    height: auto;
+}
+
+.news_title {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    color: black;
+    font-size: 23px;
+}
+
+.news_resume {
+    font-size: 14px;
+    color: #5c5c5c;
+    line-height: 20px;
+    margin-bottom: 30px;
+}
+
+footer {
+    background-color: #1e1e1e;
+    display: flex;
+    justify-content: center;
+}
+
+.footer_menu{
+    display: flex;
+}
+
+.fm_1, .fm_2, .fm_3 {
+    flex: 1;
+    color: #fff;
+    padding: 20px;
+}
+
+.fm_1 {
+    background-color: #39aae1;
+}
+
+.fm_2 {
+    background-color: #0079c7;
+}
+
+.fm_3 {
+    background-color: #2b4c99;
+}
+
+.footer_area {
+    display: flex;
+    color: #fff;
+}
+
+.flex_column {
+    flex-direction: column;
+}
+
+.footer_area_item {
+    flex: 1;
+}
+
+footer .widget_title_text {
+    color: #fff
+}
